--- a/release/resources/bin/README
+++ b/release/resources/bin/README
@@ -21,13 +21,6 @@ Welcome to Apache Felix Dependency Manager
 Apache Felix Dependency Manager is a versatile java API, allowing to declaratively
 register, acquire, and manage dynamic OSGi services.
 
-Please refer to release/resources/src/README
-
-Building and testing Apache Felix Dependency Manager
-====================================================
-
-The build instructions can be found from release/resources/src/README
-
 Getting Started
 ===============
 
@@ -36,7 +29,7 @@ getting started guide for users:
 
   http://felix.apache.org/documentation/subprojects/apache-felix-dependency-manager.html
 
-Many examples are also available from the dependency manager examples:
+You can also find examples from the following location:
 
   http://svn.apache.org/viewvc/felix/trunk/examples/dependencymanager-samples
 
