--- a/org.apache.felix.dependencymanager/resources/changelog.txt
+++ b/org.apache.felix.dependencymanager/resources/changelog.txt
@@ -16,6 +16,7 @@ FELIX-4667: "top" command for the Dependency Manager Shell
 FELIX-4672: Allow callbacks to third party instance for adapters
 FELIX-4673: Log any error thrown when trying to create a null object
 FELIX-4680: Add more DM ServiceDependency callback signatures
+FELIX-4807: New thread model for Dependency Manager
 
 Release 3.2.0:
 --------------
