Added missing eclipse resource files. The benchmark module can now be compiled only from eclipse, not from gradle (see patch in setting.gradle).
git-svn-id: https://svn.apache.org/repos/asf/felix/sandbox/pderop/dependencymanager@1663007 13f79535-47bb-0310-9956-ffa450edef68

--- a/org.apache.felix.dependencymanager.samples/src/org/apache/felix/dependencymanager/samples/dictionary/annot/README
+++ b/org.apache.felix.dependencymanager.samples/src/org/apache/felix/dependencymanager/samples/dictionary/annot/README
@@ -16,7 +16,7 @@
  */
 
 This sample shows a "SpellChecker" application (using DM Annotations) which provides a
-"dictionary:spellcheck" GOGO shell command. The GOGO "dictionary:spellcheck" command accepts a
+"dictionary.annotation:spellcheck" GOGO shell command. The GOGO "dictionary.annotation:spellcheck" command accepts a
 string as parameter, which is checked for proper existence. The SpellChecker class has a
 required/multiple (1..N) dependency over every available "DictionaryService" services, which are
 internally used by the SpellChecker command, when checking word existence.
