Moved DM4 pdf from doc/ to docs/ directory. Added comments, and @author tag in sample class headers. Fixed samples README files.
git-svn-id: https://svn.apache.org/repos/asf/felix/sandbox/pderop/dependencymanager@1663046 13f79535-47bb-0310-9956-ffa450edef68

--- a/org.apache.felix.dependencymanager.samples/src/org/apache/felix/dependencymanager/samples/composite/README
+++ b/org.apache.felix.dependencymanager.samples/src/org/apache/felix/dependencymanager/samples/composite/README
@@ -21,3 +21,7 @@ service. Here, we define a "Provider" service, which is implemented by three obj
 ProviderImpl, ProviderParticipant1, ProviderParticipant2.
 
 Dependencies are injected in all objects being part of the composition.
+
+To see logs, type this command under the gogo shell:
+
+g! log info|grep compositefactory
