--- a/org.apache.felix.dependencymanager.samples/src/org/apache/felix/dependencymanager/samples/dictionary/annot/README
+++ b/org.apache.felix.dependencymanager.samples/src/org/apache/felix/dependencymanager/samples/dictionary/annot/README
@@ -23,7 +23,7 @@ internally used by the SpellChecker command, when checking word existence.
 
 A DictionaryService is defined using a FactoryConfigurationAdapterService , allowing to instantiate
 many "DictionaryService" instances when some configurations are added to the
-"Spell Checker Dictionary (api)" factory pid from web console. 
+"Spell Checker Dictionary (annotation)" factory pid from web console. 
 The factory pid configuration metatypes are defined using the bnd "metatype" annotations
 (see DictionaryConfiguration.java).
 
@@ -31,3 +31,10 @@ The DictionaryService is decorated with a DictionaryAspect, which you can instan
 configuration to the "Spell Checker Aspect Dictionary (annotation)" factory pid from web console. The
 aspect configuration metatype is also declared using the bnd metatype annotations (see
 DictionaryAspectConfiguration.java). 
+
+Before running this sample, go to webconsole, and add some words in the Spell Checker Configuration (annotation) factory PID, and
+in the Spell Checker Aspect Dictionary (annotation) PID.
+
+Then go to gogo shell, and type dm help. You will normally see the dictionary.annotation:spellcheck command.
+Type dictionary.annotation:spellcheck <some words configured either in the spell checker annotation configuration, or in 
+the spell checker annotation aspect configuration, and the dictionary will check for proper word existance in the configuration.
