Fixed FELIX-5041 : Cannot build web console with JDK 1.8 due to javadoc problems https://issues.apache.org/jira/browse/FELIX-5041
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/webconsole@1703753 13f79535-47bb-0310-9956-ffa450edef68

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ Changes from 4.2.10 to 4.2.12
     * [FELIX-4995] - NPE when updating Apache Felix OSGi Management Console configuration without a password
     * [FELIX-5004] - Null is passed to BundleInfoProvider if plugin root is null
     * [FELIX-5031] - NPE in Web Console configuration plugin when metatype service is missing
+    * [FELIX-5041] - Cannot build web console with JDK 1.8 due to javadoc problems
 
 ** Improvement
     * [FELIX-5018] - [webconsole] "create factory configuration" link for config screen
