FELIX-5042 : Get system bundle by location, not number for global bundle list
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/webconsole@1703786 13f79535-47bb-0310-9956-ffa450edef68

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+Changes from 4.2.12 to 4.2.14
+-----------------------------
+** Bug
+    * [FELIX-5042] - Get system bundle by location, not number for global bundle list
+
+
 Changes from 4.2.10 to 4.2.12
 -----------------------------
 ** Bug
