Updated changelog with FELIX-5045.
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1703923 13f79535-47bb-0310-9956-ffa450edef68

--- a/dependencymanager/release/resources/changelog.txt
+++ b/dependencymanager/release/resources/changelog.txt
@@ -1,3 +1,9 @@
+Release Notes - Felix - Version  org.apache.felix.dependencymanager-r6:
+======================================================================
+
+** Bug
+	* [FELIX-5045] DM Optional callbacks may sometimes be invoked before start callback.
+
 Release Notes - Felix - Version  org.apache.felix.dependencymanager-r5:
 ======================================================================
 
