FELIX-5046: Gradle wrapper is not included in DM source release.
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1703924 13f79535-47bb-0310-9956-ffa450edef68

--- a/dependencymanager/release/resources/changelog.txt
+++ b/dependencymanager/release/resources/changelog.txt
@@ -3,6 +3,9 @@ Release Notes - Felix - Version  org.apache.felix.dependencymanager-r6:
 
 ** Bug
 	* [FELIX-5045] DM Optional callbacks may sometimes be invoked before start callback.
+	* [FELIX-5046] Gradle wrapper is not included in DM source release
+
+Gradle wrapper is not included in DM source release
 
 Release Notes - Felix - Version  org.apache.felix.dependencymanager-r5:
 ======================================================================
