FElIX-5051 - Memory leak in async delivery
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/eventadmin/impl@1705009 13f79535-47bb-0310-9956-ffa450edef68

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,8 @@ Changes from 1.4.4 to 1.4.6
 ---------------------------
 ** Improvement
     * [FELIX-5006] - EventAdmin threads should be named
+** Bug
+    * [FElIX-5051] - Memory leak in async delivery
 
 
 Changes from 1.4.2 to 1.4.4
