--- a/bundlerepository/doc/changelog.txt
+++ b/bundlerepository/doc/changelog.txt
@@ -1,3 +1,10 @@
+
+Changes from 2.0.4 to 2.0.6
+---------------------------
+
+** Improvement
+    * [FELIX-4764] - Add support to GZIP based compact index files
+
 Changes from 2.0.2 to 2.0.4
 ---------------------------
 
