--- a/org.apache.felix.dependencymanager.samples/src/org/apache/felix/dependencymanager/samples/compositefactory/README
+++ b/org.apache.felix.dependencymanager.samples/src/org/apache/felix/dependencymanager/samples/compositefactory/README
@@ -19,7 +19,7 @@ This Activator is an example usage of DM composite components. A composite compo
 using a composition of multiple object instances, which are used to implement a given service. 
 
 The sample also uses a Factory approach in order to instantiate the composition of objects: A
-"CompositionManager" is first injected with a Configuration that can be possibly be used to create
+"CompositionManager" is first injected with a Configuration that can possibly be used to create
 and configure all the composites.
 
 Dependencies are injected in all objects in the composition.
