--- a/shell/doc/changelog.txt
+++ b/shell/doc/changelog.txt
@@ -1,3 +1,16 @@
+Changes from 0.10.0 to 0.12.0
+-----------------------------
+** Improvement 
+    * FELIX-5021 [GOGO] Use system bundle to find bundles
+    * FELIX-4529 [Gogo] Let gosh be configured by files contributed by a bundle fragment
+    * FELIX-3341 Simple csh-like Command History
+    * FELIX-3340 Allow the prompt to be a Function
+
+** Bug 
+    * FELIX-4425 Short command in Gogo Shell not working with Java 8
+    * FELIX-3706 gogo shell startup failure in busy system
+    * FELIX-3703 Race condition in gogo runtime activator
+
 Changes from 0.8.0 to 0.10.0
 ----------------------------
 
