FELIX-5060 : Unnecessary import of org.osgi.service.component
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/webconsole@1706411 13f79535-47bb-0310-9956-ffa450edef68

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@ Changes from 4.2.12 to 4.2.14
 -----------------------------
 ** Bug
     * [FELIX-5042] - Get system bundle by location, not number for global bundle list
+    * [FELIX-5060] - Unnecessary import of org.osgi.service.component
 
 
 Changes from 4.2.10 to 4.2.12
