--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,3 +1,12 @@
+Changes from 5.2.0 to 5.4.0
+---------------------------
+
+** Improvement
+    * Update to latest framework version 5.4.0
+    * Update to latest obr 2.0.6
+    * Update to latest gogo shell 0.12.0
+    * Update to latest gogo command 0.16.0
+
 Changes from 5.0.1 to 5.2.0
 ---------------------------
 
