FELIX-5072 : Support optional property "pattern" in @SlingFilter annotation. Apply patch from  Georg Henzler
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/tools/org.apache.felix.scr.annotations@1708830 13f79535-47bb-0310-9956-ffa450edef68

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+Changes from 1.10.0 to 1.9.12
+-----------------------------
+** Improvement
+    * [FELIX-5072] - Support optional property "pattern" in @SlingFilter annotation
+
+
 Changes from 1.9.12 to 1.9.10
 -----------------------------
 ** Improvement
