--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+Changes from 1.5.0 to 1.4.0
+---------------------------
+** Improvement
+** Bug
+    * [FELIX-5074] - Using org.apache.felix.scr.bnd together with maven-bundle-plugin leads to using the wrong bnd version
+
+
 Changes from 1.4.0 to 1.3.0
 ---------------------------
 ** Improvement
