--- a/release/resources/changelog.txt
+++ b/release/resources/changelog.txt
@@ -13,6 +13,7 @@ Release Notes - Felix - Version org.apache.felix.dependencymanager-r6
     * [FELIX-5055] - Upgrade DM to BndTools 3.0.0
     * [FELIX-5104] - Call a conf dependency callback Instance with an instantiated component
     * [FELIX-5113] - Remove useless wrong test in ConfigurationDependencyImpl
+    * [FELIX-5114] - Schedule configuration update in Component executor synchronously
 
 Release Notes - Felix - Version  org.apache.felix.dependencymanager-r5:
 ======================================================================
