Prepare for 0.0.4 release
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/jaas@1717239 13f79535-47bb-0310-9956-ffa450edef68

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+Changes from 0.0.2 to 0.0.4
+---------------------------
+** Bug
+    * [FELIX-4827] - Improve logging on LoginModule registration
+
+** Improvement
+    * [FELIX-4978] - Enable name hint for JAAS Config entries
+    * [FELIX-5083] - Set webconsole.configurationFactory.nameHint for JAAS configurations
+
 Initial Release 0.0.2
 ---------------------
 
