FELIX-5158 : Update test dependencies
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/pom@1723474 13f79535-47bb-0310-9956-ffa450edef68

--- a/changelog.txt
+++ b/changelog.txt
@@ -2,7 +2,7 @@ Changes from 3 to 4
 -------------------
 ** Improvement
     * [FELIX-5157] - Add m2e lifecycle mappings
-
+    * [FELIX-5158] - Update test dependencies
 
 Changes from 2.1 to 3
 ---------------------
