--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,8 @@ Changes from 3 to 4
 ** Improvement
     * [FELIX-5157] - Add m2e lifecycle mappings
     * [FELIX-5158] - Update test dependencies
+    * [FELIX-5159] - Update plugin dependencies
+
 
 Changes from 2.1 to 3
 ---------------------
