FELIX-5160 : Update configuration for Apache rat plugin
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/pom@1723476 13f79535-47bb-0310-9956-ffa450edef68

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@ Changes from 3 to 4
     * [FELIX-5157] - Add m2e lifecycle mappings
     * [FELIX-5158] - Update test dependencies
     * [FELIX-5159] - Update plugin dependencies
+    * [FELIX-5160] - Update configuration for Apache rat plugin
 
 
 Changes from 2.1 to 3
