[FELIX-5167] Upgrade to felix utils 1.8.2
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/fileinstall@1724576 13f79535-47bb-0310-9956-ffa450edef68

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -10,6 +10,7 @@ Version 3.5.2
 
 ** Improvement
     * [FELIX-4714] - Felix should sort bundles by alphabetical name from "deploy" directory
+    * [FELIX-5167] - Upgrade to felix utils 1.8.2
 
 Version 3.5.0
 -------------
