FELIX-6177 :  Use BlockingQueue instead of synchronized in UpdateThread. Apply patch from Alexey Markevich
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@1866501 13f79535-47bb-0310-9956-ffa450edef68

--- a/configadmin/changelog.txt
+++ b/configadmin/changelog.txt
@@ -1,5 +1,7 @@
 Changes in 1.9.18
 -----------------
+** Improvement
+    * [FELIX-6177] : Use BlockingQueue instead of synchronized in UpdateThread
 ** Bug
     * [FELIX-6162] : ConfigurationManager crashes on shutdown if PersistenceManager not yet available
 
