--- a/dependencymanager/org.apache.felix.dependencymanager/changelog.txt
+++ b/dependencymanager/org.apache.felix.dependencymanager/changelog.txt
@@ -2,6 +2,19 @@ Release Notes - Felix - Version org.apache.felix.dependencymanager-r15
 ======================================================================
 
 ** List of bundles being part of the release:
+    * org.apache.felix.dependencymanager; version=4.6.1
+    * org.apache.felix.dependencymanager.shell; version=4.0.8
+    * org.apache.felix.dependencymanager.runtime; version=4.0.7
+    * org.apache.felix.dependencymanager.annotation; version=5.0.1
+    * org.apache.felix.dependencymanager.lambda; version=1.2.1
+
+** Bug
+   * [FELIX-6180] Component initialization error message get's printed to sysout instead of logged to LogService
+
+Release Notes - Felix - Version org.apache.felix.dependencymanager-r15
+======================================================================
+
+** List of bundles being part of the release:
     * org.apache.felix.dependencymanager; version=4.6.0
     * org.apache.felix.dependencymanager.shell; version=4.0.8
     * org.apache.felix.dependencymanager.runtime; version=4.0.7
