--- a/tools/org.apache.felix.scr.bnd/changelog.txt
+++ b/tools/org.apache.felix.scr.bnd/changelog.txt
@@ -1,17 +1,23 @@
-Changes from 1.9.2 to 1.9.4
----------------------------
+Changes in 1.9.6
+----------------
+** Bug
+    * [FELIX-6204] - ClassScanner.scanSources should ignore module-info
+
+
+Changes in 1.9.4
+----------------
 ** Improvement
     * [FELIX-6122] - SCR Tooling: Update to ASM 7.1 for Java 11 compatibility
 
 
-Changes from 1.9.0 to 1.9.2
----------------------------
+Changes in 1.9.2
+----------------
 ** Bug
     * [FELIX-6023] - bnd scrplugin preserve sequence of classpath entries
     
 
-Changes from 1.8.0 to 1.9.0
----------------------------
+Changes in 1.9.0
+----------------
 ** Bug
     * [FELIX-5464] - java.lang.NullPointerException at org.apache.felix.scrplugin.helper.ClassScanner.processClass(ClassScanner.java:207)
     * [FELIX-5729] - NoSuchFieldError when @Reference referenceInterface type different than field type
