--- a/tools/org.apache.felix.scr.generator/changelog.txt
+++ b/tools/org.apache.felix.scr.generator/changelog.txt
@@ -1,11 +1,17 @@
-Changes from 1.18.0 to 1.18.2
------------------------------
+Changes in 1.18.4
+-----------------
+** Bug
+    * [FELIX-6204] - ClassScanner.scanSources should ignore module-info
+
+
+Changes in 1.18.2
+-----------------
 ** Improvement
     * [FELIX-6122] - SCR Tooling: Update to ASM 7.1 for Java 11 compatibility
 
 
-Changes from 1.17.0 to 1.18.0
------------------------------
+Changes in 1.18.0
+-----------------
 ** Bug
     * [FELIX-5464] - java.lang.NullPointerException at org.apache.felix.scrplugin.helper.ClassScanner.processClass(ClassScanner.java:207)
     * [FELIX-5729] - NoSuchFieldError when @Reference referenceInterface type different than field type
